--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="link menu-link" href="">Studio</a>
           </li>
           <li class="menu-items">
-            <a class="link menu-link" href="">Portfolio</a>
+            <a class="link menu-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
             <a class="link menu-link" href="">Contacts</a>
