--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="link menu-link" href="">Studio</a>
           </li>
           <li class="menu-items">
-            <a class="link menu-link" href="./portfolio.html">Portfolio</a>
+            <a class="link menu-link" href="">Portfolio</a>
           </li>
           <li class="menu-item">
             <a class="link menu-link" href="">Contacts</a>
@@ -96,7 +96,7 @@
         <ul class="list">
           <li>
             <img
-              src="./images/galary/img-1.jpg"
+              src="./images/gallery/img-1.jpg"
               alt="our product"
               width="360"
               height="300"
@@ -104,7 +104,7 @@
           </li>
           <li>
             <img
-              src="./images/galary/img-2.jpg"
+              src="./images/gallery/img-2.jpg"
               alt="our product"
               width="360"
               height="300"
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="./images/galary/img-3.jpg"
+              src="./images/gallery/img-3.jpg"
               alt="our product"
               width="360"
               height="300"
