--- a/.vscode/portfolio.html
+++ b/.vscode/portfolio.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Studio</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header class="header-page">
       <nav class="navigation-page">
-        <a class="link logo-page" href="./index.html"
+        <a class="link logo-page" href="../index.html"
           ><span class="text-logo">Web</span>Studio</a
         >
         <ul class="list menu">
           <li class="menu-items">
-            <a class="link menu-link" href="./portfolio.html">Studio</a>
+            <a class="link menu-link" href="./">Studio</a>
           </li>
           <li class="menu-items">
-            <a class="link menu-link" href="">Portfolio</a>
+            <a class="link menu-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
             <a class="link menu-link" href="">Contacts</a>
@@ -47,5 +46,48 @@
         </ul>
       </address>
     </header>
+    <main>
+      <section>
+        <ul>
+          <li>
+        <button class="" type="button">
+          <span class="">All</span></li>
+          <li>
+          <button class="" type="button">
+          <span class="">Web Site</span></li>
+<li>
+          <button class="" type="button">
+          <span class="">App</span></li>
+           <li> 
+          <button class="" type="button">
+          <span class="">Design</span></li>
+<li>
+          <button class="" type="button">
+          <span class="">Marketing</span></li>
+
+          </ul>
+      </section>
+      <section>
+        <h2 hidden>Our product</h2>
+        <ul>
+          <li>
+          
+          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
