--- a/.vscode/portfolio.html
+++ b/.vscode/portfolio.html
@@ -48,6 +48,7 @@
     </header>
     <main>
       <section>
+        <h1 hidden>Filters</h1>
         <ul>
           <li>
         <button class="" type="button">
@@ -71,23 +72,72 @@
         <h2 hidden>Our product</h2>
         <ul>
           <li>
-          
+          <img src="../images/gallery-2/img.jpg" alt="our product"
+           width="360"/>
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <img src="../images/gallery-2/img (1).jpg" alt="our product"
+           width="360"/>
+           <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (2).jpg" alt="our product"
+           width="360"/>
+           <h3>Meditaion App</h3>
+          <p>App</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (3).jpg" alt="our product"
+           width="360"/>
+           <h3>Taxi Service</h3>
+          <p>Marketing</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (4).jpg" alt="our product"
+           width="360"/>
+           <h3>Screen Illustrations</h3>
+          <p>Design</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (5).jpg" alt="our product"
+           width="360"/>
+           <h3>Online Courses</h3>
+          <p>Marketing</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (6).jpg" alt="our product"
+           width="360"/>
+           <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (7).jpg" alt="our product"
+           width="360"/>
+           <h3>Organic Food</h3>
+          <p>Web Site</p>
+          </li>
+          <li>
+            <img src="../images/gallery-2/img (8).jpg" alt="our product"
+           width="360"/>
+           <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+          </li>
         </ul>
       </section>
-      <section></section>
-      <section></section>
-    </main>
-    <footer>
 
+    </main>
+    <!-- Footer -->
+    <footer>
+<a class="link logo-page" href="./index.html"
+        ><span class="text-logo">Web</span>Studio</a
+      >
+      <p class="text-footer">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
