--- a/.vscode/portfolio.html
+++ b/.vscode/portfolio.html
@@ -17,8 +17,7 @@
     <header class="header-page">
       <nav class="navigation-page">
         <a class="link logo-page" href="../index.html"
-          ><span class="text-logo">Web</span>Studio</a
-        >
+          ><span class="text-logo">Web</span>Studio</a>
         <ul class="list menu">
           <li class="menu-items">
             <a class="link menu-link" href="./">Studio</a>
@@ -46,6 +45,7 @@
         </ul>
       </address>
     </header>
+    <!-- Main -->
     <main>
       <section>
         <h1 hidden>Filters</h1>
@@ -56,16 +56,15 @@
           <li>
           <button class="" type="button">
           <span class="">Web Site</span></li>
-<li>
+          <li>
           <button class="" type="button">
           <span class="">App</span></li>
            <li> 
           <button class="" type="button">
           <span class="">Design</span></li>
-<li>
+          <li>
           <button class="" type="button">
           <span class="">Marketing</span></li>
-
           </ul>
       </section>
       <section>
