--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- header -->
     <header class="header-page">
       <nav class="navigation-page">
-        <a class="link logo-page" href="../index.html"
+        <a class="link logo-page" href="./index.html"
           ><span class="text-logo">Web</span>Studio</a>
         <ul class="list menu">
           <li class="menu-items">
