--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,8 @@
     <header class="header-page">
       <nav class="navigation-page">
         <a class="link logo-page" href="./index.html"
-          ><span class="text-logo">Web</span>Studio</a>
+          ><span class="text-logo">Web</span>Studio</a
+        >
         <ul class="list menu">
           <li class="menu-items">
             <a class="link menu-link" href="./">Studio</a>
@@ -51,86 +52,123 @@
         <h1 hidden>Filters</h1>
         <ul>
           <li>
-        <button class="" type="button">
-          <span class="">All</span></li>
+            <button class="" type="button">
+              <span class="">All</span>
+            </button>
+          </li>
+
           <li>
-          <button class="" type="button">
-          <span class="">Web Site</span></li>
+            <button class="" type="button">
+              <span class="">Web Site</span>
+            </button>
+          </li>
           <li>
-          <button class="" type="button">
-          <span class="">App</span></li>
-           <li> 
-          <button class="" type="button">
-          <span class="">Design</span></li>
+            <button class="" type="button">
+              <span class="">App</span>
+            </button>
+          </li>
           <li>
-          <button class="" type="button">
-          <span class="">Marketing</span></li>
-          </ul>
+            <button class="" type="button">
+              <span class="">Design</span>
+            </button>
+          </li>
+          <li>
+            <button class="" type="button">
+              <span class="">Marketing</span>
+            </button>
+          </li>
+        </ul>
       </section>
       <section>
         <h2 hidden>Our product</h2>
         <ul>
           <li>
-          <img src="../images/gallery-2/img.jpg" alt="our product"
-           width="360"/>
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
+            <img
+              src="/images/gallery-2/img.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (1).jpg" alt="our product"
-           width="360"/>
-           <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+            <img
+              src="/images/gallery-2/img-1.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (2).jpg" alt="our product"
-           width="360"/>
-           <h3>Meditaion App</h3>
-          <p>App</p>
+            <img
+              src="/images/gallery-2/img-2.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Meditaion App</h3>
+            <p>App</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (3).jpg" alt="our product"
-           width="360"/>
-           <h3>Taxi Service</h3>
-          <p>Marketing</p>
+            <img
+              src="/images/gallery-2/img-3.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (4).jpg" alt="our product"
-           width="360"/>
-           <h3>Screen Illustrations</h3>
-          <p>Design</p>
+            <img
+              src="/images/gallery-2/img-4.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (5).jpg" alt="our product"
-           width="360"/>
-           <h3>Online Courses</h3>
-          <p>Marketing</p>
+            <img
+              src="/images/gallery-2/img-5.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (6).jpg" alt="our product"
-           width="360"/>
-           <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
+            <img
+              src="/images/gallery-2/img-6.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (7).jpg" alt="our product"
-           width="360"/>
-           <h3>Organic Food</h3>
-          <p>Web Site</p>
+            <img
+              src="/images/gallery-2/img-7.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
           </li>
           <li>
-            <img src="../images/gallery-2/img (8).jpg" alt="our product"
-           width="360"/>
-           <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
+            <img
+              src="/images/gallery-2/img-8.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
           </li>
         </ul>
       </section>
-
     </main>
     <!-- Footer -->
     <footer>
-<a class="link logo-page" href="./index.html"
+      <a class="link logo-page" href="./index.html"
         ><span class="text-logo">Web</span>Studio</a
       >
       <p class="text-footer">
