--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!-- header -->
@@ -50,9 +51,9 @@
     <main>
       <section>
         <h1 hidden>Filters</h1>
-        <ul>
+        <ul class="list">
           <li>
-            <button class="" type="button">
+            <button class="model-button-filter" type="button">
               <span class="">All</span>
             </button>
           </li>
@@ -81,7 +82,7 @@
       </section>
       <section>
         <h2 hidden>Our product</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="/images/gallery-2/img.jpg"
