--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               height="260"
             />
             <h3 class="title-h3">Mark Guerrero</h3>
-            <p class="text-team">Product Designer</p>
+            <p class="sub-text-h3">Product Designer</p>
           </li>
           <li>
             <img
@@ -142,7 +142,7 @@
               height="260"
             />
             <h3 class="title-h3">Tom Ford</h3>
-            <p class="text-team">Frontend Developer</p>
+            <p class="sub-text-h3">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -152,7 +152,7 @@
               height="260"
             />
             <h3 class="title-h3">Camila Garcia</h3>
-            <p class="text-team">Marketing</p>
+            <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
             <img
@@ -162,7 +162,7 @@
               height="260"
             />
             <h3 class="title-h3">Daniel Wilson</h3>
-            <p class="text-team">UI Designer</p>
+            <p class="sub-text-h3">UI Designer</p>
           </li>
         </ul>
       </section>
