--- a/portfolio.html
+++ b/portfolio.html
@@ -54,32 +54,33 @@
         <ul class="list">
           <li>
             <button class="model-button-filter" type="button">
-              <span class="">All</span>
+              <span class="text-button-filters">All</span>
             </button>
           </li>
 
           <li>
-            <button class="" type="button">
-              <span class="">Web Site</span>
+            <button class="model-button-filter" type="button">
+              <span class="text-button-filters">Web Site</span>
             </button>
           </li>
           <li>
-            <button class="" type="button">
-              <span class="">App</span>
+            <button class="model-button-filter" type="button">
+              <span class="text-button-filters">App</span>
             </button>
           </li>
           <li>
-            <button class="" type="button">
-              <span class="">Design</span>
+            <button class="model-button-filter" type="button">
+              <span class="text-button-filters">Design</span>
             </button>
           </li>
           <li>
-            <button class="" type="button">
-              <span class="">Marketing</span>
+            <button class="model-button-filter" type="button">
+              <span class="text-button-filters">Marketing</span>
             </button>
           </li>
         </ul>
       </section>
+      <!-- Our product -->
       <section>
         <h2 hidden>Our product</h2>
         <ul class="list">
@@ -89,8 +90,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h3 class="title-h3">Banking App Interface Concept</h3>
+            <p class="sub-text-h3">App</p>
           </li>
           <li>
             <img
@@ -98,8 +99,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="title-h3">Cashless Payment</h3>
+            <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
             <img
@@ -107,8 +108,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h3 class="title-h3">Meditaion App</h3>
+            <p class="sub-text-h3">App</p>
           </li>
           <li>
             <img
@@ -116,8 +117,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="title-h3">Taxi Service</h3>
+            <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
             <img
@@ -125,8 +126,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="title-h3">Screen Illustrations</h3>
+            <p class="sub-text-h3">Design</p>
           </li>
           <li>
             <img
@@ -134,8 +135,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="title-h3">Online Courses</h3>
+            <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
             <img
@@ -143,8 +144,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="title-h3">Instagram Stories Concept</h3>
+            <p class="sub-text-h3">Design</p>
           </li>
           <li>
             <img
@@ -152,8 +153,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="title-h3">Organic Food</h3>
+            <p class="sub-text-h3">Web Site</p>
           </li>
           <li>
             <img
@@ -161,8 +162,8 @@
               alt="our product"
               width="360"
             />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="title-h3">Fresh Coffee</h3>
+            <p class="sub-text-h3">Web Site</p>
           </li>
         </ul>
       </section>
