--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="global-style">
     <!-- header -->
     <header class="header-page">
       <nav class="navigation-page">
@@ -53,7 +53,7 @@
       <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="model-button" type="button">
-          <span class="text-button">Order Service</span>
+          <p class="text-button">Order Service</p>
         </button>
       </section>
       <!-- Section Feature-->
