--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body>
+  <body class="global-style">
     <!-- header -->
     <header class="header-page">
       <nav class="navigation-page">
@@ -54,28 +54,28 @@
         <ul class="list">
           <li>
             <button class="model-button-filter" type="button">
-              <span class="text-button-filters">All</span>
+              <p class="text-button-filters">All</p>
             </button>
           </li>
 
           <li>
             <button class="model-button-filter" type="button">
-              <span class="text-button-filters">Web Site</span>
+              <p class="text-button-filters">Web Site</p>
             </button>
           </li>
           <li>
             <button class="model-button-filter" type="button">
-              <span class="text-button-filters">App</span>
+              <p class="text-button-filters">App</p>
             </button>
           </li>
           <li>
             <button class="model-button-filter" type="button">
-              <span class="text-button-filters">Design</span>
+              <p class="text-button-filters">Design</p>
             </button>
           </li>
           <li>
             <button class="model-button-filter" type="button">
-              <span class="text-button-filters">Marketing</span>
+              <p class="text-button-filters">Marketing</p>
             </button>
           </li>
         </ul>
