--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="global-style">
+  <body>
     <!-- header -->
     <header class="header-page">
       <nav class="navigation-page">
@@ -52,9 +52,7 @@
       <!-- Hero -->
       <section class="hero">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="model-button" type="button">
-          <p class="text-button">Order Service</p>
-        </button>
+        <button class="model-button" type="button">Order Service</button>
       </section>
       <!-- Section Feature-->
       <section>
