--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body class="global-style">
+  <body>
     <!-- header -->
     <header class="header-page">
       <nav class="navigation-page">
@@ -53,30 +53,19 @@
         <h1 hidden>Filters</h1>
         <ul class="list">
           <li>
-            <button class="model-button-filter" type="button">
-              <p class="text-button-filters">All</p>
-            </button>
-          </li>
-
-          <li>
-            <button class="model-button-filter" type="button">
-              <p class="text-button-filters">Web Site</p>
-            </button>
+            <button class="model-button-filter" type="button">All</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">
-              <p class="text-button-filters">App</p>
-            </button>
+            <button class="model-button-filter" type="button">Web Site</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">
-              <p class="text-button-filters">Design</p>
-            </button>
+            <button class="model-button-filter" type="button">App</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">
-              <p class="text-button-filters">Marketing</p>
-            </button>
+            <button class="model-button-filter" type="button">Design</button>
+          </li>
+          <li>
+            <button class="model-button-filter" type="button">Marketing</button>
           </li>
         </ul>
       </section>
