--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header class="header-page">
       <nav class="navigation-page">
         <a class="link logo-page" href="./index.html"
-          ><span class="text-logo">Web</span>Studio</a
-        >
+          ><span class="text-logo">Web</span><span>Studio</span>
+        </a>
         <ul class="list menu">
           <li class="menu-items">
             <a class="link menu-link" href="">Studio</a>
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contact">
         <ul class="list">
           <li>
             <a class="link main-contact" href="mailto:info@devstudio.com"
