--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header class="header-page">
       <nav class="navigation-page">
         <a class="link logo-page" href="./index.html"
-          ><span class="text-logo">Web</span><span>Studio</span>
+          >Web<span class="text-logo">Studio</span>
         </a>
         <ul class="list menu">
           <li class="menu-items">
-            <a class="link menu-link" href="">Studio</a>
+            <a class="link menu-link" href="./index.html">Studio</a>
           </li>
           <li class="menu-items">
             <a class="link menu-link" href="./portfolio.html">Portfolio</a>
