--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     <!-- Footer -->
     <footer>
       <a class="link logo-page" href="./index.html"
-        ><span class="text-logo">Web</span>Studio</a
-      >
+        >Web<span class="text-logo">Studio</span>
+      </a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
