--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
     <header class="header-page">
       <nav class="navigation-page">
         <a class="link logo-page" href="./index.html"
-          ><span class="text-logo">Web</span>Studio</a
-        >
+          >Web<span class="text-logo">Studio</span>
+        </a>
         <ul class="list menu">
           <li class="menu-items">
             <a class="link menu-link" href="./">Studio</a>
@@ -160,8 +160,8 @@
     <!-- Footer -->
     <footer>
       <a class="link logo-page" href="./index.html"
-        ><span class="text-logo">Web</span>Studio</a
-      >
+        >Web<span class="text-logo">Studio</span>
+      </a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
