--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
         <button class="model-button" type="button">Order Service</button>
       </section>
       <!-- Section Feature-->
-      <section>
+      <section class="feature">
         <h2 hidden>Feature</h2>
         <ul class="list">
-          <li>
+          <li class="list-feature">
             <h3 class="title-h3">Strategy</h3>
             <p class="sub-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li  class="list-feature">
             <h3 class="list title-h3">Punctuality</h3>
             <p class="sub-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
-          </li>
+          </li  class="list-feature">
           <li>
             <h3 class="list title-h3">Diligence</h3>
             <p class="sub-text">
@@ -79,7 +79,7 @@
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li  class="list-feature">
             <h3 class="list title-h3">Technologies</h3>
             <p class="sub-text">
               Design practice focused on digital experiences. We bring forth a
