--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <button class="model-button" type="button">Order Service</button>
       </section>
       <!-- Section Feature-->
-      <section class="feature">
-        <h2 hidden>Feature</h2>
+      <section>
+        <h2 class="feature" hidden>Feature</h2>
         <ul class="list">
           <li class="list-feature">
             <h3 class="title-h3">Strategy</h3>
