--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2 class="feature" hidden>Feature</h2>
         <ul class="list">
           <li class="list-feature">
-            <h3 class="title-h3">Strategy</h3>
+            <h3 class="list title-feature">Strategy</h3>
             <p class="sub-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
