--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
             </p>
           </li>
           <li class="list-feature">
-            <h3 class="list title-h3">Punctuality</h3>
+            <h3 class="list title-feature">Punctuality</h3>
             <p class="sub-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="list-feature">
-            <h3 class="list title-h3">Diligence</h3>
+            <h3 class="list title-feature">Diligence</h3>
             <p class="sub-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="list-feature">
-            <h3 class="list title-h3">Technologies</h3>
+            <h3 class="list title-feature">Technologies</h3>
             <p class="sub-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
