--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </section>
       <!-- Section about -->
       <section>
-        <h2 class="title-h2">What are we doing</h2>
+        <h2 class="title-about">What are we doing</h2>
         <ul class="list">
           <li>
             <img
