--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </section>
       <!-- Team -->
       <section>
-        <h2 class="title-h2">Our Team</h2>
+        <h2 class="title-about">Our Team</h2>
         <ul class="list">
           <li>
             <img
@@ -129,7 +129,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-h3">Mark Guerrero</h3>
+            <h3 class="title-feature">Mark Guerrero</h3>
             <p class="sub-text-h3">Product Designer</p>
           </li>
           <li>
@@ -139,7 +139,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-h3">Tom Ford</h3>
+            <h3 class="title-feature">Tom Ford</h3>
             <p class="sub-text-h3">Frontend Developer</p>
           </li>
           <li>
@@ -149,7 +149,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-h3">Camila Garcia</h3>
+            <h3 class="title-feature">Camila Garcia</h3>
             <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
@@ -159,7 +159,7 @@
               width="264"
               height="260"
             />
-            <h3 class="title-h3">Daniel Wilson</h3>
+            <h3 class="title-feature">Daniel Wilson</h3>
             <p class="sub-text-h3">UI Designer</p>
           </li>
         </ul>
