--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               height="260"
             />
             <h3 class="title-feature">Mark Guerrero</h3>
-            <p class="sub-text-h3">Product Designer</p>
+            <p class="sub-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -140,7 +140,7 @@
               height="260"
             />
             <h3 class="title-feature">Tom Ford</h3>
-            <p class="sub-text-h3">Frontend Developer</p>
+            <p class="sub-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -150,7 +150,7 @@
               height="260"
             />
             <h3 class="title-feature">Camila Garcia</h3>
-            <p class="sub-text-h3">Marketing</p>
+            <p class="sub-text">Marketing</p>
           </li>
           <li>
             <img
@@ -160,13 +160,13 @@
               height="260"
             />
             <h3 class="title-feature">Daniel Wilson</h3>
-            <p class="sub-text-h3">UI Designer</p>
+            <p class="sub-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <a class="link logo-page" href="./index.html"
         >Web<span class="text-logo">Studio</span>
       </a>
