--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <!-- Footer -->
     <footer class="footer">
       <a class="link logo-page" href="./index.html"
-        >Web<span class="text-logo">Studio</span>
+        >Web<span class="text-logo-footer">Studio</span>
       </a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
