--- a/portfolio.html
+++ b/portfolio.html
@@ -158,9 +158,9 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <a class="link logo-page" href="./index.html"
-        >Web<span class="text-logo">Studio</span>
+        >Web<span class="text-logo-footer">Studio</span>
       </a>
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
