--- a/portfolio.html
+++ b/portfolio.html
@@ -49,111 +49,113 @@
     </header>
     <!-- Main -->
     <main>
+      <h1 hidden>Filters</h1>
+      <ul class="list">
+        <li>
+          <button class="model-button-filter" type="button">All</button>
+        </li>
+        <li>
+          <button class="model-button-filter" type="button">Web Site</button>
+        </li>
+        <li>
+          <button class="model-button-filter" type="button">App</button>
+        </li>
+        <li>
+          <button class="model-button-filter" type="button">Design</button>
+        </li>
+        <li>
+          <button class="model-button-filter" type="button">Marketing</button>
+        </li>
+      </ul>
+
+      <!-- Our product -->
       <section>
-        <h1 hidden>Filters</h1>
+        <h2 hidden>Our product</h2>
         <ul class="list">
           <li>
-            <button class="model-button-filter" type="button">All</button>
+            <img
+              src="/images/gallery-2/img.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Banking App Interface Concept</h3>
+            <p class="sub-text-h3">App</p>
           </li>
           <li>
-            <button class="model-button-filter" type="button">Web Site</button>
+            <img
+              src="/images/gallery-2/img-1.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Cashless Payment</h3>
+            <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
-            <button class="model-button-filter" type="button">App</button>
+            <img
+              src="/images/gallery-2/img-2.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Meditaion App</h3>
+            <p class="sub-text-h3">App</p>
           </li>
           <li>
-            <button class="model-button-filter" type="button">Design</button>
+            <img
+              src="/images/gallery-2/img-3.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Taxi Service</h3>
+            <p class="sub-text-h3">Marketing</p>
           </li>
           <li>
-            <button class="model-button-filter" type="button">Marketing</button>
+            <img
+              src="/images/gallery-2/img-4.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Screen Illustrations</h3>
+            <p class="sub-text-h3">Design</p>
+          </li>
+          <li>
+            <img
+              src="/images/gallery-2/img-5.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Online Courses</h3>
+            <p class="sub-text-h3">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/gallery-2/img-6.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Instagram Stories Concept</h3>
+            <p class="sub-text-h3">Design</p>
+          </li>
+          <li>
+            <img
+              src="/images/gallery-2/img-7.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Organic Food</h3>
+            <p class="sub-text-h3">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="/images/gallery-2/img-8.jpg"
+              alt="our product"
+              width="360"
+            />
+            <h3 class="title-h3">Fresh Coffee</h3>
+            <p class="sub-text-h3">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <!-- Our product -->
-    <section>
-      <h2 hidden>Our product</h2>
-      <ul class="list">
-        <li>
-          <img src="/images/gallery-2/img.jpg" alt="our product" width="360" />
-          <h3 class="title-h3">Banking App Interface Concept</h3>
-          <p class="sub-text-h3">App</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-1.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Cashless Payment</h3>
-          <p class="sub-text-h3">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-2.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Meditaion App</h3>
-          <p class="sub-text-h3">App</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-3.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Taxi Service</h3>
-          <p class="sub-text-h3">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-4.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Screen Illustrations</h3>
-          <p class="sub-text-h3">Design</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-5.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Online Courses</h3>
-          <p class="sub-text-h3">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-6.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Instagram Stories Concept</h3>
-          <p class="sub-text-h3">Design</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-7.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Organic Food</h3>
-          <p class="sub-text-h3">Web Site</p>
-        </li>
-        <li>
-          <img
-            src="/images/gallery-2/img-8.jpg"
-            alt="our product"
-            width="360"
-          />
-          <h3 class="title-h3">Fresh Coffee</h3>
-          <p class="sub-text-h3">Web Site</p>
-        </li>
-      </ul>
-    </section>
-
     <!-- Footer -->
     <footer class="footer">
       <a class="link logo-page" href="./index.html"
