--- a/portfolio.html
+++ b/portfolio.html
@@ -71,13 +71,13 @@
         <!-- Our product -->
 
         <ul class="list">
-          <li>
+          <li class="link">
             <img
-              src="/images/gallery-2/img.jpg"
+              src="./images/gallery-2/img.jpg"
               alt="our product"
               width="360"
             />
-            <h2 class="title-h3">Banking App Interface Concept</h2>
+            <h2 class="progect-card-title">Banking App Interface Concept</h2>
             <p class="sub-text-h3">App</p>
           </li>
           <li>
