--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,7 @@
 
         <ul class="list">
           <li class="link">
+            <a class="link" href=""></a>
             <img
               src="./images/gallery-2/img.jpg"
               alt="our product"
