--- a/portfolio.html
+++ b/portfolio.html
@@ -72,12 +72,12 @@
 
         <ul class="list">
           <li class="link">
-            <a class="link" href=""></a>
-            <img
-              src="./images/gallery-2/img.jpg"
-              alt="our product"
-              width="360"
-            />
+            <a class="link" href="">
+              <img
+                src="./images/gallery-2/img.jpg"
+                alt="our product"
+                width="360"
+            /></a>
             <h2 class="progect-card-title">Banking App Interface Concept</h2>
             <p class="sub-text-h3">App</p>
           </li>
