--- a/portfolio.html
+++ b/portfolio.html
@@ -82,77 +82,93 @@
               <p class="sub-text-h3">App</p>
             </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-1.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Cashless Payment</h2>
-            <p class="sub-text-h3">Marketing</p>
+          <li class="link">
+            <a class="link" href="">
+              <img
+                src="/images/gallery-2/img-1.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Cashless Payment</h2>
+              <p class="sub-text-h3">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-2.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Meditaion App</h2>
-            <p class="sub-text-h3">App</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-2.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Meditaion App</h2>
+              <p class="sub-text-h3">App</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-3.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Taxi Service</h2>
-            <p class="sub-text-h3">Marketing</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-3.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Taxi Service</h2>
+              <p class="sub-text-h3">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-4.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Screen Illustrations</h2>
-            <p class="sub-text-h3">Design</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-4.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Screen Illustrations</h2>
+              <p class="sub-text-h3">Design</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-5.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Online Courses</h2>
-            <p class="sub-text-h3">Marketing</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-5.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Online Courses</h2>
+              <p class="sub-text-h3">Marketing</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-6.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Instagram Stories Concept</h2>
-            <p class="sub-text-h3">Design</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-6.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Instagram Stories Concept</h2>
+              <p class="sub-text-h3">Design</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-7.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Organic Food</h2>
-            <p class="sub-text-h3">Web Site</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-7.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Organic Food</h2>
+              <p class="sub-text-h3">Web Site</p>
+            </a>
           </li>
-          <li>
-            <img
-              src="/images/gallery-2/img-8.jpg"
-              alt="our product"
-              width="360"
-            />
-            <h2 class="title-h3">Fresh Coffee</h2>
-            <p class="sub-text-h3">Web Site</p>
+          <li class="link">
+            <a href="">
+              <img
+                src="/images/gallery-2/img-8.jpg"
+                alt="our product"
+                width="360"
+              />
+              <h2 class="title-h3">Fresh Coffee</h2>
+              <p class="sub-text-h3">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
