--- a/portfolio.html
+++ b/portfolio.html
@@ -89,84 +89,84 @@
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Cashless Payment</h2>
+              <h2 class="progect-card-title">Cashless Payment</h2>
               <p class="sub-text-h3">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-2.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Meditaion App</h2>
+              <h2 class="progect-card-title">Meditaion App</h2>
               <p class="sub-text-h3">App</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-3.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Taxi Service</h2>
+              <h2 class="progect-card-title">Taxi Service</h2>
               <p class="sub-text-h3">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-4.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Screen Illustrations</h2>
+              <h2 class="progect-card-title">Screen Illustrations</h2>
               <p class="sub-text-h3">Design</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-5.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Online Courses</h2>
+              <h2 class="progect-card-title">Online Courses</h2>
               <p class="sub-text-h3">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-6.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Instagram Stories Concept</h2>
+              <h2 class="progect-card-title">Instagram Stories Concept</h2>
               <p class="sub-text-h3">Design</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-7.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Organic Food</h2>
+              <h2 class="progect-card-title">Organic Food</h2>
               <p class="sub-text-h3">Web Site</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/gallery-2/img-8.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="title-h3">Fresh Coffee</h2>
+              <h2 class="progect-card-title">Fresh Coffee</h2>
               <p class="sub-text-h3">Web Site</p>
             </a>
           </li>
