--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Banking App Interface Concept</h2>
-              <p class="sub-text-h3">App</p>
+              <p class="sub-text-progect">App</p>
             </a>
           </li>
           <li class="link">
@@ -90,7 +90,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Cashless Payment</h2>
-              <p class="sub-text-h3">Marketing</p>
+              <p class="sub-text-progect">Marketing</p>
             </a>
           </li>
           <li class="link">
@@ -101,7 +101,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Meditaion App</h2>
-              <p class="sub-text-h3">App</p>
+              <p class="sub-text-progect">App</p>
             </a>
           </li>
           <li class="link">
@@ -112,7 +112,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Taxi Service</h2>
-              <p class="sub-text-h3">Marketing</p>
+              <p class="sub-text-progect">Marketing</p>
             </a>
           </li>
           <li class="link">
@@ -123,7 +123,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Screen Illustrations</h2>
-              <p class="sub-text-h3">Design</p>
+              <p class="sub-text-progect">Design</p>
             </a>
           </li>
           <li class="link">
@@ -134,7 +134,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Online Courses</h2>
-              <p class="sub-text-h3">Marketing</p>
+              <p class="sub-text-progect">Marketing</p>
             </a>
           </li>
           <li class="link">
@@ -145,7 +145,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Instagram Stories Concept</h2>
-              <p class="sub-text-h3">Design</p>
+              <p class="sub-text-progect">Design</p>
             </a>
           </li>
           <li class="link">
@@ -156,7 +156,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Organic Food</h2>
-              <p class="sub-text-h3">Web Site</p>
+              <p class="sub-text-progect">Web Site</p>
             </a>
           </li>
           <li class="link">
@@ -167,7 +167,7 @@
                 width="360"
               />
               <h2 class="progect-card-title">Fresh Coffee</h2>
-              <p class="sub-text-h3">Web Site</p>
+              <p class="sub-text-progect">Web Site</p>
             </a>
           </li>
         </ul>
