--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-1.jpg"
+                src="./images/gallery-2/img-1.jpg"
                 alt="our product"
                 width="360"
               />
@@ -96,18 +96,18 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-2.jpg"
+                src="./images/gallery-2/img-2.jpg"
                 alt="our product"
                 width="360"
               />
-              <h2 class="progect-card-title">Meditaion App</h2>
+              <h2 class="progect-card-title">Meditation App</h2>
               <p class="sub-text-progect">App</p>
             </a>
           </li>
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-3.jpg"
+                src="./images/gallery-2/img-3.jpg"
                 alt="our product"
                 width="360"
               />
@@ -118,7 +118,7 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-4.jpg"
+                src="./images/gallery-2/img-4.jpg"
                 alt="our product"
                 width="360"
               />
@@ -129,7 +129,7 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-5.jpg"
+                src="./images/gallery-2/img-5.jpg"
                 alt="our product"
                 width="360"
               />
@@ -140,7 +140,7 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-6.jpg"
+                src="./images/gallery-2/img-6.jpg"
                 alt="our product"
                 width="360"
               />
@@ -151,7 +151,7 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-7.jpg"
+                src="./images/gallery-2/img-7.jpg"
                 alt="our product"
                 width="360"
               />
@@ -162,7 +162,7 @@
           <li class="link">
             <a class="link" href="">
               <img
-                src="/images/gallery-2/img-8.jpg"
+                src="./images/gallery-2/img-8.jpg"
                 alt="our product"
                 width="360"
               />
