--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       <section>
         <h1 hidden>Filters</h1>
         <ul class="list">
-          <li>
+          <li class="">
             <button class="model-button-filter" type="button">All</button>
           </li>
           <li>
