--- a/portfolio.html
+++ b/portfolio.html
@@ -53,19 +53,19 @@
         <h1 hidden>Filters</h1>
         <ul class="list">
           <li>
-            <button class="model-button-filter" type="button">All</button>
+            <button class="button-filter" type="button">All</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">Web Site</button>
+            <button class="button-filter" type="button">Web Site</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">App</button>
+            <button class="button-filter" type="button">App</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">Design</button>
+            <button class="button-filter" type="button">Design</button>
           </li>
           <li>
-            <button class="model-button-filter" type="button">Marketing</button>
+            <button class="button-filter" type="button">Marketing</button>
           </li>
         </ul>
         <!-- Our product -->
