--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
         <!-- Our product -->
 
         <ul class="list">
-          <li>
+          <li class="link">
             <a class="link" href="">
               <img
                 src="./images/gallery-2/img.jpg"
