--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contact">
         <ul class="list">
           <li>
             <a class="link main-contact" href="mailto:info@devstudio.com"
