--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.min.css
+"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- header -->
@@ -27,7 +33,7 @@
           <li class="menu-items">
             <a class="link menu-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="menu-item">
+          <li class="menu-items">
             <a class="link menu-link" href="">Contacts</a>
           </li>
         </ul>
